tests/baselines/reference/optionalChainWithInstantiationExpression1(target=es2020).errors.txt
optionalChainWithInstantiationExpression1.ts(12,1): error TS2532: Object is possibly 'undefined'.
optionalChainWithInstantiationExpression1.ts(12,5): error TS1477: An instantiation expression cannot be followed by a property access.


==== optionalChainWithInstantiationExpression1.ts (2 errors) ====
    declare namespace A {
        export class b<T> {
            static d: number;
            constructor(x: T);
        }
    }
    
    type c = unknown;
    
    declare const a: typeof A | undefined;
    
    a?.b<c>.d;
    ~~~~~~~
!!! error TS2532: Object is possibly 'undefined'.
        ~~~
!!! error TS1477: An instantiation expression cannot be followed by a property access.
    
    a?.b.d
    